# visual-search

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
config/: config.toml
images/: .gitignore
sdk/: convert_schemas.py  generate_sdks.sh
sdk/python/recoai_visual_search/: models.py  visual_search.py
sdk/schemas/: add_image.json  common.json  remove_collection.json  remove_image.json  search_image.json  upsert_collection.json
sdk/schemas_raw/: add_image.json  remove_collection.json  remove_image.json  search_image.json  upsert_collection.json
sdk/sdk_example/: visual_search_python_sdk_example.ipynb  visual_search_python_sdk_example.py  visual_search_python_sdk_example_ecommerce-Copy1-checkpoint.ipynb  visual_search_python_sdk_example_ecommerce-Copy1-checkpoint.py  visual_search_python_sdk_example_ecommerce.ipynb  visual_search_python_sdk_example_ecommerce.py
src/: generate_schema.rs  imagenet_test.rs  lib.rs  main.rs  old_main.rs  webapp.rs
src/api/: mod.rs
src/image_transform/: architectures.rs  functions.rs  mod.rs  models.rs  pipeline.rs  utils.rs
src/index/: db.rs  events.rs  mod.rs
src/state/: app.rs  mod.rs  work_queue.rs
ui/: package.json
