[package]
authors = ["Paweł Jankiewicz <pawel@logicai.io>", "Michal Zagalski <michal@logicai.io>"]
edition = "2018"
name = "visual-search"
version = "0.1.0"

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
image = "0.23.14"
io = "0.0.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tract = "0.14.2"
tract-onnx = "0.14.2"
url = {version="2.2.2", features = ["serde"] }
reqwest = { version = "0.11.3", features = ["blocking"] }
hnsw = "0.7.0"
rand_pcg = "0.3.0"
space = "0.11.0"
actix = "0.12.0"
dyn-clone = "1.0.4"
bytes = "1.0.1"
enum_dispatch = "0.3.7"
actix-web = "3.3.2"
serde_with = "1.9.2"
toml = "0.5.8"
schemars = { git = "https://github.com/recoai/schemars", branch = "custom_extensions", features=["preserve_order", "url"] }
actix-web-httpauth = "0.5.1"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/webapp.rs"
name = "visual-search"

[[bin]]
path = "src/imagenet_test.rs"
name = "imagenet_test"

[[bin]]
path = "src/generate_schema.rs"
name = "generate_schema"
