[package]
name = "visual-search"
authors = ["Paweł Jankiewicz <pawel@logicai.io>", "Michal Zagalski <michal@logicai.io>"]
description = "Visual search engine for images using Deep Learning models to extract features"
license = "MIT"
edition = "2018"
version = "0.1.2"
keywords = ["images", "deep-learning", "search", "vision", "onnx"]
categories = ["graphics", "computer-vision", "web-programming"]
readme = "README.md"
homepage = "https://github.com/pjankiewicz/visual-search"
exclude = [
    "images/",
    "models/*.onnx"
]

[dependencies]
clap = "2.33.3"
glob = "0.3.0"
image = "0.24.7"
io = "0.0.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tract = "0.20.7"
tract-onnx = "0.20.7"
tract-nnef= "0.20.7"
url = {version="2.2.2", features = ["serde"] }
reqwest = { version = "0.11.3", features = ["blocking"] }
hnsw = "0.11.0"
rand_pcg = "0.3.0"
space = "0.17.0"
actix = "0.12.0"
dyn-clone = "1.0.4"
bytes = "1.0.1"
enum_dispatch = "0.3.7"
actix-web = "3.3.2"
serde_with = "3.2.0"
toml = "0.7.6"
actix-web-httpauth = "0.5.1"
schemars = { version = "0.8.3", features=["preserve_order", "url"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/webapp.rs"
name = "visual-search"

[[bin]]
path = "src/imagenet_test.rs"
name = "imagenet_test"
